syntax = "proto3";

option go_package = "github.com/grpc-example/pb";

package person;

message Person {
  string name = 1;
  string last_name = 2;
}